# miniCar

./: .gitignore
.catkin_tools/profiles/default/: devel_collisions.txt
devel/: .catkin
devel/.private/auto_control/: .catkin  .rosinstall  setup.sh
devel/.private/joy/: .catkin  .rosinstall  setup.sh
devel/.private/joystick_drivers/: .catkin  local_setup.sh  setup.sh
devel/.private/sensor_package/: .catkin  local_setup.sh  setup.sh
devel/.private/spacenav_node/: .catkin  .rosinstall  setup.sh
devel/.private/traxxas_control/: .catkin  local_setup.sh
devel/.private/wiimote/: .catkin  setup.sh
devel/include/traxxas_control/: servo_esc_coeffs.h
devel/include/wiimote/: IrSourceInfo.h  State.h  TimedSwitch.h
devel/lib/auto_control/: auto_controller.py  sensor_node.py
devel/lib/joy/: joy_node
devel/lib/pkgconfig/: auto_control.pc  joy.pc  sensor_package.pc  spacenav_node.pc  (+2 more)
logs/joy/: build.make.000.log.stderr
src/auto_control/: CMakeLists.txt
src/auto_control/launch/: auto_controller.launch  sensor_node.launch  start.launch
src/auto_control/scripts/: auto_controller.py  auto_controller1_PID.py  auto_controller2.py  auto_controller4_PID.py  auto_controller_PID.py  auto_controller_left.py  auto_controller_mizuki.py  auto_controller_nononka.py  auto_controller_noshiro.py  auto_controller_test.py  sensor_node.py  sensor_node_median.py  sensor_test.py  本番用１  本番用１.py
src/traxxas_control/: README.md  record.sh  record_depth_only.sh  record_with_imu_depth_aligned.sh  record_with_imu_depth_registered_points.sh  record_with_imu_depth_unaligned.sh  run.sh
(+118 files in other folders)
